--- a/README
+++ b/README
@@ -1,18 +1,24 @@
 Poboljšanja za aplikaciju vizualizacije sortiranja u Rustu
+
+Goran
 1. Dodati zvučne efekte
 
 2. Istaknuti usporedbe i zamjene, različite boje za stupce koji se uspoređuju i one koji se zamjenjuju
 
-5. Uključiti više algoritama za usporedbu, poput Radix Sorta.
+3. Uključiti više algoritama za usporedbu, poput Radix Sorta.
 
-6. Dopustiti unos vlastitih nizova brojeva 
+4. Dopustiti unos vlastitih nizova brojeva 
 
-7. Prikazati statistike tijekom ili nakon sortiranja, poput broja usporedbi, broja zamjena i vremena potrebnog za sortiranje.
+5. Prikazati statistike tijekom ili nakon sortiranja, poput broja usporedbi, broja zamjena i vremena potrebnog za sortiranje.
 
-8. Različite teme (npr. tamni način rada, svijetli način rada ili šarene teme) i omogućiti korisnicima prilagodbu boja.
 
-9. Kontrole u stvarnom vremenu,  gumb za pauziranje, nastavak, korak-po-korak pregled algoritma ili ponovno pokretanje vizualizacije.
 
-11. Integracija s vanjskim podacima, učitavanje nizova iz datoteka (npr. .txt ili .csv) i vizualizirajte sortiranje stvarnih podataka.
+Petar
 
-16. Adaptivna vizualizacija na temelju veličine zaslona ili preferencija korisnika. Automatski skaliranje visine stupaca
+6. Različite teme (npr. tamni način rada, svijetli način rada ili šarene teme) i omogućiti korisnicima prilagodbu boja.
+
+7. Kontrole u stvarnom vremenu,  gumb za pauziranje, nastavak, korak-po-korak pregled algoritma ili ponovno pokretanje vizualizacije.
+
+8. Integracija s vanjskim podacima, učitavanje nizova iz datoteka (npr. .txt ili .csv) i vizualizirajte sortiranje stvarnih podataka.
+
+9. Adaptivna vizualizacija na temelju veličine zaslona ili preferencija korisnika. Automatski skaliranje visine stupaca
