--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Goran
 
 Petar
 
-6. Različite teme (npr. tamni način rada, svijetli način rada ili šarene teme) i omogućiti korisnicima prilagodbu boja.
+6. Različite teme (npr. tamni način rada, svijetli način rada ili šarene teme) i omogućiti korisnicima prilagodbu boja. - riješeno
 
 7. Kontrole u stvarnom vremenu,  gumb za pauziranje, nastavak, korak-po-korak pregled algoritma ili ponovno pokretanje vizualizacije. - ovo bi trebalo biti riješeno
 
