--- a/README
+++ b/README
@@ -17,7 +17,7 @@ Petar
 
 6. Različite teme (npr. tamni način rada, svijetli način rada ili šarene teme) i omogućiti korisnicima prilagodbu boja. - riješeno
 
-7. Kontrole u stvarnom vremenu,  gumb za pauziranje, nastavak, korak-po-korak pregled algoritma ili ponovno pokretanje vizualizacije. - ovo bi trebalo biti riješeno
+7. Kontrole u stvarnom vremenu,  gumb za pauziranje, nastavak, korak-po-korak pregled algoritma ili ponovno pokretanje vizualizacije. - riješeno
 
 8. Integracija s vanjskim podacima, učitavanje nizova iz datoteka (npr. .txt ili .csv) i vizualizirajte sortiranje stvarnih podataka.
 
